# watsonxchallenge2026-databasequerymigration-accelator

./: README.md  software-requirements-ontology.jsonld
car-rental-oracle/: README.md  pom.xml
car-rental-oracle/migration/: agent-migration-rules.md  oracle_to_postgres_guide.sql  postgresql_migrated_schema.sql
car-rental-oracle/sql/: 01_schema_ddl.sql  02_triggers.sql  03_packages_and_views.sql  04_advanced_queries.sql  05_seed_data.sql
car-rental-oracle/src/main/java/com/carrental/dao/: CustomerDAO.java  RentalDAO.java  VehicleDAO.java
car-rental-oracle/src/main/java/com/carrental/model/: Customer.java  Rental.java  Vehicle.java
car-rental-oracle/src/main/java/com/carrental/servlet/: CustomerServlet.java  RentalServlet.java  VehicleServlet.java
car-rental-oracle/src/main/java/com/carrental/util/: DBConnectionPool.java  JsonUtil.java
car-rental-oracle/src/main/resources/: db.properties
car-rental-oracle/src/main/webapp/: index.html
car-rental-oracle/src/main/webapp/WEB-INF/: web.xml
car-rental-oracle/src/main/webapp/css/: main.css
car-rental-oracle/src/main/webapp/js/: app.js  mock-api.js
mcp-rules-server/: .gitignore  .ruff.toml  Makefile  README.md  config.yaml  pyproject.toml
mcp-rules-server/src/: __init__.py
mcp-rules-server/src/mcp_rules_server/: __init__.py  main.py
mcp-rules-server/src/mcp_rules_server/tools/: __init__.py  example_tools.py
mcp-rules-server/test/: __init__.py
